# Super-Nova

./: README.md
include/Compiler/Transforms/: CMakeLists.txt  GenerateDynamicWrapper.h  Passes.h
include/Compiler/Transforms/Affine/: CMakeLists.txt  DependencyAnalysis.h  DependencyAnalysisTestPass.h  MemoryAccessAnalysis.h
include/Compiler/Translation/: CMakeLists.txt
include/Compiler/Translation/NovaToArith/: NovaToArith.h
include/Compiler/Translation/NovaToLinalg/: NovaToLinNamed.cpp  NovaToLinalg.cpp  TNovaToLinalg.cpp
include/Compiler/Translation/NovaToTosa/: CMakeLists.txt  NovaToTosa.cpp  TNovaToTosa.cpp
lib/API/: CMakeLists.txt  NovaCompilerAPI.cpp
lib/Pipeline/: Gpupipeline.cpp  Pipeline.cpp
lib/Transforms/: AddGpuMemoryCopies.cpp  CMakeLists.txt  CleanupPass.cpp  ConvertMemRefToGpu.cpp  FastmathFlag.cpp  GenerateDynamicWrapper.cpp
lib/Transforms/Affine/: CMakeLists.txt  DependencyAnalysis.cpp  DependencyAnalysisTestPass.cpp  MemoryAccessAnalysis.cpp
ltest/: 4reducomp.mlir
tools/nova-opt/: nova-opt.cpp
